<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fish Logger Pro</string>
    <string name="logger_service">Fish Logger Pro</string>
    <string name="add_fish">Add Fish</string>
    <string name="search_log">Search Log</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_fish">AddFishActivity</string>
    <string name="label">Label</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="bait">Bait</string>
    <string name="note">Note</string>
    <string name="select_photo">Select Photo</string>
    <string name="dialog_photo">Take a photo?</string>
    <string name="dialog_new">New Photo</string>
    <string name="lengthUnit">in</string>
    <string name="weightUnit">lbs</string>
    <string name="conditions">Conditions</string>
    <string name="submit">Submit</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="text_gps">Record location?</string>
    <string name="switch_gps">Record GPS Location</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_species">Add Species</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_list">ListActivity</string>

</resources>