<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/l_blue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fishloggerpro.act.AddFishActivity" >

    <TextView
        android:id="@+id/text_add_fish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/add_fish"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp" >

        <Spinner
            android:id="@+id/spinner_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="5"
            android:hint="@string/note" />

        <ImageButton
            android:id="@+id/button_add_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:contentDescription="@string/add_species"
            android:src="@android:drawable/ic_input_add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp" >

        <EditText
            android:id="@+id/editText_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/length"
            android:inputType="number" />

        <TextView
            android:id="@+id/text_lengthUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="@string/lengthUnit"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp" >

        <EditText
            android:id="@+id/editText_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/weight"
            android:inputType="number" />

        <TextView
            android:id="@+id/text_weightUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="@string/weightUnit"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText_bait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bait"
        android:paddingBottom="5dp" />

    <EditText
        android:id="@+id/editText_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/note"
        android:paddingBottom="5dp" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp" >

        <Button
            android:id="@+id/button_select_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="2"
            android:text="@string/select_photo" />

        <ImageView
            android:id="@+id/imageView_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/select_photo"
            android:src="@android:drawable/divider_horizontal_textfield" />
    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />

</LinearLayout>